experimental/internal/lexer/testdata/braces/unclosed.proto.stderr.txt
error: encountered unmatched `(` delimiter
  --> testdata/braces/unclosed.proto:1:1
   |
 1 | (
   | ^ expected a closing `)`

encountered 1 error
